--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="//www.thymeleaf.org">
+<html xmlns:th="//www.thymeleaf.org">  <!-- thymeleaf 태그 사용을 선언 -->
 <html>
 <head>
 	<meta charset="utf-8">
