--- a/src/main/resources/fragments/header.html
+++ b/src/main/resources/fragments/header.html
@@ -6,13 +6,8 @@
                 <a th:href="@{bdList}"> <span>SpringBoot</span> <span>STUDY</span></a>
            </div>
            
-           <div class="useInfo">
-               <span>genie</span>
-           </div>
-           
            <ul class="nav">
-               <th:block>
-<!--               <th:block th:if="${session.userAuth}==3"> 쿼리스트링보내기-->
+              <th:block th:if="${session.mbLevel}==3"> 
                    <li class="on"><a class="menu1" th:href="@{mbList(page=1)}">맴버정보</a></li>
                </th:block>
                <th:block>
