--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,6 +18,9 @@
                <th:block>
                    <li class="on"><a class="menu1" th:href="@{bdList}">보드정보</a></li>
                </th:block>
+               <th:block>
+                   <li class="on"><a class="menu1" th:href="@{bdWiki}">위키</a></li>
+               </th:block>
            </ul>
        </div>
     </header>
